maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:2: error: Missing closing brace `}' assumed here
override def run() {
^JediEscaper:2: error: expected start of definition
override def run() {
         ^JediEscaper:26: error: expected start of definition
override def run() {
         ^JediEscaper:53: error: expected start of definition
override def run() {
         ^